[package]
name = "pd"
version = "0.1.0"
authors = ["Justus von der Beek <beek@in.tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.16.1", features = ["full"]}
byteorder = { version = "1", default-features = false }
serde = { version = "1.0", features=["derive"]}
bincode = "1.0"
log = "0.4"
simplelog = "^0.10.0"
pretty-hex = "0.2.1"
rand = "0.8.4"
sha2 = "0.9.5"
libmath = "0.2.1"
dns-lookup = "1.0.8"
pnet = "0.28.0"